--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -173,8 +173,8 @@
     "static.realm.minCountForMode": "Nombre minimum pour le mode",
     "static.user.valid6char": "Le nom d`utilisateur doit comporter au moins 6 caractères",
     "static.QATForecastImport.ForecastRegion": "Région(s) de prévision",
-    "static.updatePlanningUnit.updatePlanningUnit": "Mettre à jour l'unité de planification",
     "static.supplyPlan.stockBalance": "Solde des stocks disponibles",
+    "static.updatePlanningUnit.updatePlanningUnit": "Mettre à jour l'unité de planification",
     "static.supplyPlan.duplicateInventory": "Inventaire en double",
     "static.procurementAgentPlanningUnit.validSKUCode": "Entrer le code SKU",
     "static.manualTagging.ROPrimeline": "N° de ligne principale",
@@ -721,8 +721,8 @@
     "static.extrapolation.selectExtrapolationMethod": "Sélectionner les méthodes d`extrapolation à utiliser",
     "static.supplyPlan.reorderInterval": "Intervalle de commande (mois)",
     "static.integration.versionStatus": "État de la version",
-    "static.extrapolation.SeeSections": "Voir les sections 3 et 4 ci-dessous pour une explication des méthodes d'extrapolation et comment choisir au mieux les méthodes pour votre prévision",
     "static.NodeData.ModelingTransferTab": "Onglet Modélisation/Transfert",
+    "static.extrapolation.SeeSections": "Voir les sections 3 et 4 ci-dessous pour une explication des méthodes d'extrapolation et comment choisir au mieux les méthodes pour votre prévision",
     "static.dashboard.shipmentGlobalDemandViewheader": "Aperçu des expéditions",
     "static.supplyPlan.duplicateShipment": "Envoi en double",
     "static.user.username": "Nom",
@@ -928,8 +928,8 @@
     "static.manufacturer.manufacturerName": "Nom du Fabricant",
     "static.dataEntry.showOnlyErrors": "Afficher uniquement les erreurs",
     "static.budget.budget": "Nom du budget",
-    "static.ManageTree.PlanningUnit": "Unité de planification",
     "static.monthlyForecast.EquivalencyUnits": "Unités d'équivalence",
+    "static.ManageTree.PlanningUnit": "Unité de planification",
     "static.planningUnitSetting.max99MonthAllowed": "Un maximum de 99 mois est autorisé",
     "static.monthlyForecast.The": "Le",
     "static.product.productunittext": "Sélectionnez l`unité",
@@ -940,8 +940,8 @@
     "static.tree.nodeType": "Type de nœud",
     "static.formula.suggestedText100": "Qté minimale",
     "static.listTree.addSuccessMessageAll": "Vos unités de planification sélectionnées ont été ajoutées avec succès. Veuillez cliquer sur Créer un arbre pour dupliquer l`arbre.",
-    "static.importIntoQAT.forecastTracerCategory": "Catégorie de traceur de prévision",
     "static.supplyPlan.yesAccount": "Oui - pour être inclus",
+    "static.importIntoQAT.forecastTracerCategory": "Catégorie de traceur de prévision",
     "static.dashboard.programimport": "Importation de programme PipeLine",
     "static.extrapolation.noOfMonths": "Nombre de mois",
     "static.supplyPlan.type": "Type",
@@ -1112,14 +1112,14 @@
     "static.modelingCalculator.confirmAlert": "Vous souhaitez remplacer la table existante ?",
     "static.supplyPlanFormula.inventoryTurns2L7": "Si la condition ci-dessus (20 %) est trouvée plusieurs fois dans l'ensemble de données, QAT pour utiliser l'inv. la PLUS BASSE. mode tours de l'ensemble (Exemple :, le programme contient 100 PU ; 60 PU ont des tours différents ; 20 PU ont des tours inv. = 1,2, 20 autres PU ont des tours inv. = 2,5 ; QAT affichera 1,2 comme les tours inv. pour ce programme )",
     "static.supplyPlanFormula.inventoryTurns2L6": "Le mode sera déterminé si la valeur apparaît dans au moins 20 % (réglage variable) du nombre total d'unités de planification du programme. (Exemple : le programme contient 100 UP, dont 20 ont des tours = 1,2 et les autres ont tous des tours différents ; les tours du programme seront donc de 1,2)",
-    "static.QATForecastImport.MultiRegion": "Prévision multirégionale vers plan d'approvisionnement multirégional",
     "static.tooltip.SemiAverages": "La semi-moyenne estime les tendances basées sur les deux moitiés d'une série. QAT divise les données réelles en deux parties égales (moitié) et la moyenne arithmétique des valeurs de chaque partie (moitié) est calculée comme les valeurs y de deux points sur une ligne. La pente de la ligne de tendance est déterminée par la différence entre ces valeurs y dans le temps, telles que définies par les points médians des deux moitiés de la série ou les valeurs x des points. Voir l'Aide pour plus d'informations.",
+    "static.QATForecastImport.MultiRegion": "Prévision multirégionale vers plan d'approvisionnement multirégional",
     "static.whatIf.validScenario": "Sélectionnez un scénario",
     "static.roleHead.role": "Rôle",
     "static.ManageTree.NodeTitle": "Titre du nœud",
     "static.programOnboarding.programDisplayName": "Code du programme",
     "static.report.stockout": "Rupture de stock",
-    "static.treeTemplate.monthsInPastTooltip": "Choisissez le nombre de mois passés disponibles dans la liste déroulante Mois pour les nœuds de ce modèle d`arborescence. Les mois seront négatifs, par rapport au mois de début prévu. (par exemple, si vous sélectionnez 2, vous verrez Mois -1 et Mois -2 disponibles, qui sont les 2 mois précédant immédiatement la période de prévision.) Lorsque le modèle est utilisé, les mois réels seront affichés en fonction du début de prévision sélectionné par l`utilisateur. mois.",
+    "static.treeTemplate.monthsInPastTooltip": "Choisissez le nombre de mois passés disponibles dans la liste déroulante Mois pour les nœuds de ce modèle d`arborescence. Les mois seront négatifs, par rapport au mois de début prévu. (par exemple, si vous sélectionnez 2, vous verrez Mois -1 et Mois -2 disponibles, qui sont les 2 mois précédant immédiatement la période de prévision.) Lorsque le modèle est utilisé, les mois réels seront affichés en fonction du début de prévision sélectionné par l`utilisateur.",
     "static.dashboard.exportprogram": "Exporter le programme",
     "static.placeholder.forecastMethod": "Attention : Veuillez noter que toute modification apportée à cet écran aura un impact sur l'ensemble de l'application.",
     "static.modelingValidation.levelUnit1": "Niveau (unité)",
@@ -1338,8 +1338,8 @@
     "static.common.viewDashBoard": "Afficher le tableau de bord",
     "static.CompareSelect.VisuallyCompare": "Comparez visuellement les différentes prévisions. La prévision sélectionnée apparaîtra",
     "static.compareVersion.compareWithVersion": "Comparer avec la version (* indique la version finale)",
-    "static.message.syncExpiresOn": "Vous avez dépassé le nombre maximum de jours de travail hors connexion autorisés . Connectez vous pour continuer à utiliser QAT",
     "static.common.prevPage": "Page précédente",
+    "static.message.syncExpiresOn": "Vous avez dépassé le nombre maximum de jours de travail hors connexion autorisés . Connectez vous pour continuer à utiliser QAT",
     "static.commitTree.NodesWithChildrenThatDoNotAddUpTo100Prcnt": "Noeuds sources avec des noeuds dérivés dont la somme ne fait pas 100% ",
     "static.extrapolation.LowErrorValue": "une faible valeur d'erreur peut être utilisée pour aider à sélectionner une méthode d'extrapolation préférée, et QAT mettra en évidence ces meilleurs ajustements dans un tableau. Cependant, si des changements substantiels sont anticipés, l'extrapolation la mieux adaptée peut ne pas être la prévision sélectionnée par l'utilisateur.",
     "static.supplyPlanFormula.amcEx13": "CMM = 6 392",
@@ -1478,16 +1478,16 @@
     "static.formula.suggestedText39": "AMC pour N (janvier 2022) = 3 000",
     "static.formula.suggestedText33": "Par conséquent, QAT proposera une ordonnance pour amener le mois N au",
     "static.program.confirmsubmit": "Confirmer la soumission",
-    "static.importFromQATSupplyPlan.conversionFactor": "Facteur de conversion (Unité de Planification du plan d'approvisionnement vers Unité de Planification du module prévision)",
     "static.formula.suggestedText34": "MOS maximale",
+    "static.importFromQATSupplyPlan.conversionFactor": "Facteur de conversion (Unité de Planification du plan d'approvisionnement vers Unité de Planification du module prévision)",
     "static.budget.programtext": "Sélectionner un programme",
     "static.formula.suggestedText35": "= (Max MOS pour N) * (AMC pour N) - (Solde final pour N)",
     "static.formula.suggestedText36": "Exemple 2 (en rupture de stock) :",
     "static.message.budget.updateFailed": "Échec de la mise à jour du budget $ ",
     "static.formula.suggestedText30": "Étape 1 : L`AMC de janvier 2022 n`est pas 0 ou N/A",
     "static.formula.suggestedText31": "Étape 2 : Le solde de fin de janvier 2022 n`est pas égal à 0 (pas de stock en rupture de stock)",
-    "static.report.qatPIDFID": "ID de produit QAT / Identifiant de produit (prévision)",
     "static.formula.suggestedText32": "Étape 3 : Le produit est en sous-stock pendant 3 mois consécutifs - janvier 2022, février 2022, mars 2022 ont tous un MOS (10, 9,4 et 8,4) inférieur au MOS minimum (12).",
+    "static.report.qatPIDFID": "ID de produit QAT / Identifiant de produit (prévision)",
     "static.tree.blank": "Construire votre arbre de prévision",
     "static.message.addFailed": "Échec de l`ajout de {{entityname}}",
     "static.supplyPlan.addNewShipment": "Ajouter une nouvelle expédition",
@@ -1633,8 +1633,8 @@
     "static.showFormula.endingBalance3": "= Max (Inventaire projeté, 0)",
     "static.common.download": "Charger",
     "static.masterDataSync.confirmSyncMessage": "Voulez vous vraiment continuer?",
-    "static.showFormula.endingBalance2": "(utiliser la consommation réelle si disponible, sinon utiliser les prévisions)",
     "static.planningUnitSetting.stockEndOf": "Le stock disponible et utilisable (fin de",
+    "static.showFormula.endingBalance2": "(utiliser la consommation réelle si disponible, sinon utiliser les prévisions)",
     "static.budget.availableAmt": "Montant restant",
     "static.ForecastSummary.UnitPrices": "Prix unitaires",
     "static.listTree.NoteTableOnListTree": "Remarque : Le tableau sur ce menu répertorie les arbres de prévision pour chaque programme de prévision qui a été chargé.",
@@ -1966,8 +1966,8 @@
     "static.realm.realmCode": "Nom d`affichage du Domaine",
     "static.report.noofmonth": "Nombre de mois inclus dans le calcul",
     "static.manualTagging.shippingCost": "Frais d`expédition",
-    "static.budget.duplicateDisplayName": "La combinaison du nom du budget et du nom d'affichage existe déjà",
     "static.loadDelDataset.deleteThisLocalVersion": "Supprimer cette version locale. Notez que toutes les modifications non validées seront définitivement supprimées.",
+    "static.budget.duplicateDisplayName": "La combinaison du nom du budget et du nom d'affichage existe déjà",
     "static.common.jan": "Jan",
     "static.common.startdateCompare": "La date de début doit être antérieure à la date de fin",
     "static.common.description": "Description",
@@ -2359,8 +2359,8 @@
     "static.extrapolation.YouHave": "Vous avez",
     "static.commitTree.puThatDoesNotAppearOnAnyTree": "Unité(s) de planification qui n'apparaissent sur aucun arbre",
     "static.dataEntryAndAdjustments.GraphBelow": "Utiliser le graphique sous le tableau des données détaillées pour afficher les données ajustées (Remarque : le graphique ne sera mis à jour qu'après avoir cliqué sur \"Soumettre\")",
-    "static.QATForecastImport.ForecastToMultiRegion": "Prévision nationale vers plan d'approvisionnement multirégional : notez que le processus d'importation doit être répété pour chaque région du plan d'approvisionnement.",
     "static.modelingValidation.fyMay": "Année fiscale (par exemple, l'exercice 2023 commence en Peut 23)",
+    "static.QATForecastImport.ForecastToMultiRegion": "Prévision nationale vers plan d'approvisionnement multirégional : notez que le processus d'importation doit être répété pour chaque région du plan d'approvisionnement.",
     "static.common.max20digittext": "Maximum de 20 caractères",
     "static.report.productCatalogReport": "Catalogue de produits",
     "static.report.productCost": "Coût unitaire de produit (USD)",
@@ -2557,8 +2557,8 @@
     "static.qpl.calculate": "Calculer",
     "static.report.forecastErrorMonthlyFormulaNew3": "La formule WAPE utilise les 3 à 12 mois de données précédents en fonction de la sélection dans le",
     "static.supplyPlan.adj": "Adj",
-    "static.report.forecastErrorMonthlyFormulaNew1": "L’erreur de prévision est calculée à l’aide du pourcentage d’erreur absolu pondéré (WAPE). WAPE est utilisé par rapport à MAPE (Mean Absolute Percentage Error) car il peut tenir compte du moment où la consommation est intermittente ou faible.",
     "static.organisation.organisationcodetext": "Entrez le nom d`affichage",
+    "static.report.forecastErrorMonthlyFormulaNew1": "L’erreur de prévision est calculée à l’aide du pourcentage d’erreur absolu pondéré (WAPE). WAPE est utilisé par rapport à MAPE (Mean Absolute Percentage Error) car il peut tenir compte du moment où la consommation est intermittente ou faible.",
     "static.pipeline.interpolateMissingValues": "Interpoler les valeurs manquantes",
     "static.ModelingTransfer.DataTransferred": "Si les données sont transférées vers/depuis un nœud, alors  l'extrapolation nest pas autorisée sur ce nœud",
     "static.message.user.invalidToken": "Mot de passe à usage unique non valide",
@@ -2609,8 +2609,8 @@
     "static.mt.notLinkedQAT": "Non lié (QAT)",
     "static.translation.labelId": "ID d`étiquette",
     "static.common.grandTotal": "Somme finale",
-    "static.CompareSelect.EnableUser": "Permettre aux utilisateurs de comparer toutes les prévisions disponibles (à partir des arbres de prévision et de la consommation) et de sélectionner leur prévision finale. Dans cet écran, les utilisateurs sélectionnent leurs prévisions une unité de planification et une région à la fois. Pour sélectionner les prévisions pour plusieurs unités de planification et régions à la fois, utilisez l'",
     "static.commitVersion.goTo": "Aller à",
+    "static.CompareSelect.EnableUser": "Permettre aux utilisateurs de comparer toutes les prévisions disponibles (à partir des arbres de prévision et de la consommation) et de sélectionner leur prévision finale. Dans cet écran, les utilisateurs sélectionnent leurs prévisions une unité de planification et une région à la fois. Pour sélectionner les prévisions pour plusieurs unités de planification et régions à la fois, utilisez l'",
     "static.message.user.emailIdExists": "L`adresse e-mail existe déjà",
     "static.dashboard.fullMasterDataSync": "Synchronisation complète des données de base",
     "static.problemReport.reviewed": "Révisé",
@@ -2636,8 +2636,8 @@
     "static.ManageTree.SumofChildren": "Somme des dérivés",
     "static.list.listLanguage": "Afficher les langues",
     "static.report.errorperc": "Pourcentage d`erreur dans la prévision",
-    "static.QATForecastImport.convertedForecastConsumption": "Consommation prévisionnelle convertie arrondie (à importer)",
     "static.common.loadDeleteLocalVersion": "Charger/Supprimer la version locale",
+    "static.QATForecastImport.convertedForecastConsumption": "Consommation prévisionnelle convertie arrondie (à importer)",
     "static.inventory.adjustmentQunatityPU": "Quantité d`ajustement (produit QAT)",
     "static.modelingValidation.fiscalYear": "Exercice fiscal",
     "static.ManageTree.EnableUsersManage": "Permettre aux utilisateurs de gérer et de construire des arbres de prévision et des scénarios, pour toutes prévisions autres que les consommations (démographique, morbidité, services, etc.). Notez que plus d'informations sont disponibles après avoir cliqué sur un quelconque nœud .",
@@ -2847,8 +2847,8 @@
     "static.program.programDiscription": "Notes de version",
     "static.organisation.organisationtext": "Entrez le nom de l`organisation",
     "static.supplyPlan.notesDetailsCon": "JJ-MMM-AA (Région | Source de données) Remarques",
-    "static.inventory.active": "Actif",
     "static.manualtagging.resultOrderNoBlank": "Saisir le nº de commande",
+    "static.inventory.active": "Actif",
     "static.commitTree.dataEntry&Adjustment": "Saisie des données et ajustement",
     "static.add.addCountryRealm": "Ajouter un pays",
     "static.NodeData.TypeOfNode": "Permet à l'utilisateur de spécifier le type de nœud",
