--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -3242,5 +3242,6 @@
     "static.importFromQATSupplyPlan.supplyPlanProgram": "Programa de Plano de Fornecimento",
     "static.importIntoSP.dataExists": "Os dados já existem no Programa Plano de Fornecimento",
     "static.importIntoSP.dataExistsGray": "Os dados existem no Programa Plano de Fornecimento e são passados {{month}} meses, portanto não pode ser importado.",
-    "static.forecastMonthlyErrorReport.showConsumption": "Mostrar consumo ajustado por ruptura de estoque?"
+    "static.forecastMonthlyErrorReport.showConsumption": "Mostrar consumo ajustado por ruptura de estoque?",
+    "static.common.allItemsSelected": "Todos os itens são selecionados"
 }
