--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -3243,5 +3243,19 @@
     "static.importIntoSP.dataExists": "Os dados já existem no Programa Plano de Fornecimento",
     "static.importIntoSP.dataExistsGray": "Os dados existem no Programa Plano de Fornecimento e são passados {{month}} meses, portanto não pode ser importado.",
     "static.forecastMonthlyErrorReport.showConsumption": "Mostrar consumo ajustado por ruptura de estoque?",
-    "static.common.allItemsSelected": "Todos os itens são selecionados"
+    "static.common.allItemsSelected": "Todos os itens são selecionados",
+    "static.dataSet.forecastingProgramName": "Insira o nome do programa de previsão",
+    "static.dataSet.forecastPeriodInMonth": "Insira o período de previsão (meses)",
+    "static.dataSet.forecastperiodInMonthRequired": "O período de previsão não deve conter números negativos, números decimais, caracteres e símbolos especiais",
+    "static.tree.target": "Alvo",
+    "static.tree.annualTarget": "Meta Anual",
+    "static.tree.endingValueTarget": "Finalizando a meta/mudança de valor",
+    "static.tree.increase": "Aumentar",
+    "static.tree.decrease": "Diminuir",
+    "static.tree.discription": "Alteração mensal para {{startDate}} - {{stopDate}};\nConsiderações: {{dateRange}} Meta inserida = {{enteredTarget}}\nMeta calculada = {{calculatedTarget}}",
+    "static.treeTemplate.monthSelector": "Seletor de mês",
+    "static.tree.consumptionInterval":"Intervalo de Consumo (Referência)",
+    "static.treeTemplate.returnToList": "Retornar à lista",
+    "static.tree.targetChangePer": "Alteração de meta (%)",
+    "static.tree.changePerPoints": "Alteração (% pontos)"
 }
