--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3237,5 +3237,6 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.errorPage.validUserComment": "Enter Description"
 }
