--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -3236,5 +3236,6 @@
     "static.currency.conversionrateusd": "Tasa de cambio a USD",
     "static.logout.confirmLogout": "¿Desea cerrar la sesión?",
     "static.common.node": "Nodo",
-    "static.pipeline.pipelineConvertorLinux": "Linux"
+    "static.pipeline.pipelineConvertorLinux": "Linux",
+    "static.errorPage.validUserComment": "Introduzca la descripción"
 }
