--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -3238,5 +3238,8 @@
     "static.currency.conversionrateusd": "Tasa de cambio a USD",
     "static.logout.confirmLogout": "¿Desea cerrar la sesión?",
     "static.common.node": "Nodo",
-    "static.pipeline.pipelineConvertorLinux": "Linux"
+    "static.pipeline.pipelineConvertorLinux": "Linux",
+    "static.tree.deleteScenario": "Eliminar escenario",
+    "static.tree.showOnlyActive": "Mostrar solo activa",
+    "static.tree.showInactive": "Mostrar inactiva"
 }
