--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3272,5 +3272,6 @@
     "static.shipment.budgetWarning1":"The budget",
     "static.shipment.budgetWarning2":") is going over budget by $",
     "static.shipment.budgetWarning3":"(please see shipment ID",
-    "static.shipment.budgetWarning4":"Do you want to continue?"
+    "static.shipment.budgetWarning4":"Do you want to continue?",
+    "static.organisation.organisationcodemax10digittext": "Display name length should be 10 characters long"
 }
