--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -3238,5 +3238,6 @@
     "static.currency.conversionrateusd": "Taxa de câmbio para 1 USD",
     "static.logout.confirmLogout": "Tem certeza que deseja sair?",
     "static.common.node": "Nó",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.ticket.priority": "Selecione Prioridade"
 }
