changes in error page for priority & label changes

--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -3238,6 +3238,5 @@
     "static.currency.conversionrateusd": "Taxa de câmbio para 1 USD",
     "static.logout.confirmLogout": "Tem certeza que deseja sair?",
     "static.common.node": "Nó",
-    "static.pipeline.pipelineConvertorLinux": "Linux.",
-    "static.ticket.priority": "Selecione Prioridade"
+    "static.pipeline.pipelineConvertorLinux": "Linux."
 }
