--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -3238,6 +3238,5 @@
     "static.currency.conversionrateusd": "Taux de conversion à 1 USD",
     "static.logout.confirmLogout": "Voulez vous vraiment vous déconnecter?",
     "static.common.node": "Nœud",
-    "static.pipeline.pipelineConvertorLinux": "Linux.",
-    "static.ticket.priority": "Sélectionnez la priorité"
+    "static.pipeline.pipelineConvertorLinux": "Linux."
 }
