--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -3238,6 +3238,5 @@
     "static.currency.conversionrateusd": "Tasa de cambio a USD",
     "static.logout.confirmLogout": "¿Desea cerrar la sesión?",
     "static.common.node": "Nodo",
-    "static.pipeline.pipelineConvertorLinux": "Linux",
-    "static.ticket.priority": "Seleccionar prioridad"
+    "static.pipeline.pipelineConvertorLinux": "Linux"
 }
